--- a/style.css
+++ b/style.css
@@ -1,18 +1,24 @@
-body::before {
+html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+}
+
+body {
     content: "";
     position: absolute;
     top: 0;
     left: 0;
+    right: 0;
+    bottom: 0;
     width: 100%;
     height: 100%;
-    background: url("/img/blop.png") center/cover no-repeat;
+    background: url("/img/blops/blob1.png") center center / cover no-repeat;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    opacity: 0.4;
-    /* Controla la opacidad de la imagen */
     z-index: -1;
-    /* Coloca la imagen detrás del contenido */
 }
 
 div {
