--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     bottom: 0;
     width: 100%;
     height: 100%;
-    background: url("/img/blops/blob1.png") center center / cover no-repeat;
+    background: url("./img/blops/blob1.png") center center / cover no-repeat;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
